--- a/src/app/navigation/navbar.component.html
+++ b/src/app/navigation/navbar.component.html
@@ -1,6 +1,18 @@
 <div class="navbar-dark">
     <P class="we">WELCOME TO QUOTE SEARCH APP</P>
-    <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
-    <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
+    <!-- <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+    <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a> -->
 </div>
+<!-- <div class="row">
+    <div class="col s12 no-pd">
+        <ul class="tabs tabs-icon">
+            <li class="tab col s3"><a href="#test1"><i class="material-icons">android</i>android</a></li>
+            <li class="tab col s3"><a href="#test2"><i class="material-icons">face</i>face</a></li>
+            <li class="tab col s3"><a href="#test3"><i class="material-icons">account_box</i>User</a></li>
+            <li class="tab col s3"><a href="#test4"><i class="material-icons">search</i>search</a></li>
+            <li class="tab col s3 tab-hide"><a href="#test5"><i class="material-icons">search</i>search</a></li>
+        </ul>
+    </div>
+</div> -->
+
 <router-outlet></router-outlet>
