--- a/src/app/repositories/repositories.component.css
+++ b/src/app/repositories/repositories.component.css
@@ -1,30 +1,127 @@
-.container {
-    margin-top: 5rem;
-    background-color: blue;
-}
+/* .container {
+ margin-top: 5rem;
+background-color: blue;
 
+}
 p {
     text-indent: 2rem;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
-
 .btn {
     margin-top: 30px;
     background-color: #056b5b;
 }
-
 .seeMorebtn {
     text-align: center;
 }
-
 .display {
     float: left;
     margin-bottom: 0.3rem;
 }
-
 .search-form p {
     font-size: 30px;
     margin: 0;
     justify-content: left;
     align-items: left;
+}
+*/
+
+
+/***** CSS VARIABLES *****/
+
+
+/***** CSS RESET *****/
+
+.card a {
+    text-decoration: none;
+}
+
+.card {
+    height: 100%;
+    width: 110%;
+    border: 1px solid #38444c;
+    padding: 1rem;
+}
+
+.card article {
+    margin-top: 0.5rem;
+}
+
+.card article p {
+    font-size: 1.15em;
+}
+
+.profile {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.username {
+    margin-left: 10px;
+}
+
+.username h4 {
+    font-size: 0.9rem;
+}
+
+.username span {
+    color: #566471;
+    font-size: 0.85rem;
+}
+
+.tweet-info {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    padding: 1rem 0;
+    border-bottom: 1px solid #38444c;
+}
+
+.tweet-info span {
+    font-size: 0.85rem;
+    color: #566471;
+}
+
+.heart {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    background-image: url("https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png");
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: 3000%;
+}
+
+.is_animating {
+    animation: heart-burst 0.8s steps(28) 1;
+}
+
+@keyframes heart-burst {
+    from {
+        background-position: left;
+    }
+    to {
+        background-position: right;
+    }
+}
+
+svg {
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    fill: #566471;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.body {
+    background: #ffd89b;
+    background: -webkit-linear-gradient(to right, #ffd89b, #19547b);
+    background: linear-gradient(to right, #ffd89b, #19547b);
+    min-height: 110%;
 }
