--- a/src/app/search-form/search-form.component.css
+++ b/src/app/search-form/search-form.component.css
@@ -1,8 +1,5 @@
-
-
-
 input {
-     width: 100%;
+    width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -11,14 +8,12 @@ input {
     margin-bottom: 16px;
 }
 
-
 input[type=submit] {
     background-color: #056b5b;
     color: white;
     text-align: center;
     /* width: 50%; */
 }
-
 
 button {
     background-color: #056b5b;
@@ -31,11 +26,27 @@ button {
     opacity: 0.9;
 }
 
-
-
 form {
     background-color: #f1f1f1;
     padding: 20px;
     width: 100vh;
-     /*height: 100%; */
+    /*height: 100%; */
+}
+
+.cont {
+    background: #ffd89b;
+    background: -webkit-linear-gradient(to right, #ffd89b, #19547b);
+    background: linear-gradient(to right, #ffd89b, #19547b);
+    /* min-height: 100vh; */
+}
+
+.form-control:focus {
+    box-shadow: none;
+}
+
+.form-control-underlined {
+    border-width: 0;
+    border-bottom-width: 1px;
+    border-radius: 0;
+    padding-left: 0;
 }
