--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,6 +1,17 @@
-  <form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
-  <div class="form-group">
-    <input type="text" class="form-control" name="find" placeholder="Enter username"[(ngModel)]= "searchInfo.find"  #find='ngModel'>
-    <button type="submit" class="btn btn-group"> Search</button>
-  </div>
+<!-- <form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
+    <div class="form-group">
+        <input type="text" class="form-control" name="find" placeholder="Enter username" [(ngModel)]="searchInfo.find" #find='ngModel'>
+        <button type="submit" class="btn btn-group"> Search</button>
+    </div>
+</form> -->
+
+<form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
+    <div class="row mt-5 mb-4">
+        <div class="form-group col-md-9">
+            <input name="find" type="email" [(ngModel)]="searchInfo.find" #find='ngModel' placeholder="Enter your username..." class="form-control form-control-underlined">
+        </div>
+        <div class="form-group col-md-3">
+            <button type="submit" class="btn btn-primary rounded-pill btn-block shadow-sm">Search</button>
+        </div>
+    </div>
 </form>
