--- a/src/app/user/search.component.html
+++ b/src/app/user/search.component.html
@@ -1,67 +1,192 @@
-<div class="container">
-  <ng-progress></ng-progress>
-  <div class="row ">
-    <div class="col-md-12">
-      <app-search-form (getName)='findUser($event)'></app-search-form>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-7">
-      <div class="table table-striped table-bordered">
-        <h3> {{users.name}}</h3>
-        <table class="table table-striped table-light">
-          <tbody>
-          <tr>
-            <th scope="row">Github Username:</th>
-              <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
+<div class="">
+    <ng-progress></ng-progress>
+    <div class="body ">
+        <div class="row mb-5">
+            <div class="col-lg-8 mx-auto">
+                <div class="bg-white m-5  rounded shadow">
 
-          </tr>
-          <tr>
-            <th scope="row">Repositories:</th>
-            <td>{{users.public_repos }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Date created:</th>
-            <td>{{users.created_at | date}}</td>
-          </tr>
-          <tr>
-            <th scope="row">Followers:</th>
-            <td>{{users.followers}}</td>
-          </tr>
-          <tr>
-            <th scope="row">Following</th>
-            <td>{{users.following}}</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div class="col-md-5 image-end">
-      <img src="{{users.avatar_url}}">
-    </div>
-  </div>
-  <hr>
-</div>
-<div class="container">
-  <div class="row">
-    <div  class="col-md-12">
-      <h2 style="color: #056b5b" > User Repositories</h2>
-      <div class="table table-striped">
-        <table class="table">
-          <tbody>
-          <tr *ngFor='let repository of userRepos.newRepository'>
-            <td>
-                <a href="{{repository.html_url}}" target="_blank" >{{repository.name}}</a>
+                    <app-search-form (getName)='findUser($event)'></app-search-form>
 
-                <br>
-              <p class="desc">Description: {{repository.description}}</p>
-              <br>
-              <p>Date Created: {{repository.created_at | date}}</p>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+    <div class="container ">
+        <div class="">
+            <div class="container mt-3 text-center">
+                <div class="row -content-center">
+                    <small class="col-12 col-sm-6 col-md-4">
+        <div class="card custom-card">
+          <div class="img-container">
+            <img src="{{users.avatar_url}}"/>
+          </div>
+          <div class="custom-card-body">
+            <h4 class="card-title">
+              {{users.login}}
+            </h4>
+            <div class="category">
+              Since: {{users.created_at | date}}
+            </div>
+            <div class="text text-overflow">
+               {{users.description}}
+            </div>
+          </div>
+        </div>
+                    </small>
+                </div>
+            </div>
+        </div>
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-3 p-3 " *ngFor='let repository of userRepos.newRepository'>
+                    <div class="container">
+                        <div class='card shadow-sm'>
+                            <div class='profile'>
+                                <div class='username'>
+                                    <h4>{{repository.owner.login}}</h4>
+                                    <a href='{{repository.owner.html_url}}' target='_blank'> <span>{{repository.owner.email}</span></a>
+                                </div>
+                            </div>
+                            <article>
+
+                                <p>{{repository.description}}</p>
+                            </article>
+                            <div class='tweet-info'>
+                                <span></span> <span> {{repository.created_at|date}} </span><span>{{repository.name}}</span>
+                            </div>
+                            <div class='icons'>
+                                <svg viewBox="0 0 24 24 " aria-hidden="true " class="r-4qtqp9 r-yyyyoo r-50lct3 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1srniue ">
+      <g>
+        <path d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787
+            12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z "></path>
+      </g>
+    </svg>
+                                <svg viewBox="0 0 24 24 " aria-hidden="true " class="r-4qtqp9 r-yyyyoo r-50lct3 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1srniue ">
+      <g>
+        <path d="M23.77 15.67c-.292-.293-.767-.293-1.06 0l-2.22 2.22V7.65c0-2.068-1.683-3.75-3.75-3.75h-5.85c-.414 0-.75.336-.75.75s.336.75.75.75h5.85c1.24 0 2.25 1.01 2.25 2.25v10.24l-2.22-2.22c-.293-.293-.768-.293-1.06 0s-.294.768 0 1.06l3.5 3.5c.145.147.337.22.53.22s.383-.072.53-.22l3.5-3.5c.294-.292.294-.767
+            0-1.06zm-10.66 3.28H7.26c-1.24 0-2.25-1.01-2.25-2.25V6.46l2.22 2.22c.148.147.34.22.532.22s.384-.073.53-.22c.293-.293.293-.768 0-1.06l-3.5-3.5c-.293-.294-.768-.294-1.06 0l-3.5 3.5c-.294.292-.294.767 0 1.06s.767.293 1.06 0l2.22-2.22V16.7c0 2.068
+            1.683 3.75 3.75 3.75h5.85c.414 0 .75-.336.75-.75s-.337-.75-.75-.75z "></path>
+      </g>
+    </svg>
+                                <div class="heart "></div>
+                                <svg viewBox="0 0 24 24 " aria-hidden="true " class="r-4qtqp9 r-yyyyoo r-50lct3 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1srniue ">
+      <g>
+        <path d="M17.53 7.47l-5-5c-.293-.293-.768-.293-1.06 0l-5 5c-.294.293-.294.768 0 1.06s.767.294 1.06 0l3.72-3.72V15c0 .414.336.75.75.75s.75-.336.75-.75V4.81l3.72 3.72c.146.147.338.22.53.22s.384-.072.53-.22c.293-.293.293-.767 0-1.06z "></path>
+        <path d="M19.708 21.944H4.292C3.028 21.944 2 20.916 2 19.652V14c0-.414.336-.75.75-.75s.75.336.75.75v5.652c0 .437.355.792.792.792h15.416c.437 0 .792-.355.792-.792V14c0-.414.336-.75.75-.75s.75.336.75.75v5.652c0 1.264-1.028 2.292-2.292 2.292z "></path>
+      </g>
+    </svg>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 style="color: #056b5b"> User Repositories</h2>
+                        <div class="table table-striped">
+                            <table class="table">
+                                <tbody>
+                                    <tr *ngFor='let repository of userRepos.newRepository'>
+                                        <td>
+                                            <a href="{{repository.html_url}}" target="_blank">{{repository.name}}</a>
+
+                                            <br>
+                                            <p class="desc">Description: {{repository.description}}</p>
+                                            <br>
+                                            <p>Date Created: {{repository.created_at | date}}</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- <div class="col-md-6">
+            <app-search-form (getName)='findUser($event)'></app-search-form>
+        </div> -->
+    </div>
+    <!-- <div clas s="row">
+        <div class="col-md-7">
+            <div class="table table-striped table-bordered">
+                <h3> {{users.name}}</h3>
+                <table class="table table-striped table-light">
+                    <tbody>
+                        <tr>
+                            <th scope="row">Github Username:</th>
+                            <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">Repositories:</th>
+                            <td>{{users.public_repos }}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Date created:</th>
+                            <td>{{users.created_at | date}}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Followers:</th>
+                            <td>{{users.followers}}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Following</th>
+                            <td>{{users.following}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-5 image-end">
+            <img src="{{users.avatar_url}}">
+        </div>
+    </div> -->
+    <!-- <div class="container">
+        <article class="card">
+            <div class="card__img-container">
+                <img src="{{users.avatar_url}}" alt="User" class="card__img">
+                <div class="card__img-underlay"></div>
+            </div>
+
+            <div class="card__content">
+                <span class="card__icon fab fa-linkedin"></span>
+                <h3 class="card__title">{{users.html_url}}</h3>
+                <p class="card__desc">">{{users.description}}</p>
+
+                <div class="card__flex">
+                    <span class="card__author">~ ">{{users.login}}</span>
+                    <span class="fa fa-arrow-right"></span>
+                </div>
+            </div>
+        </article>
+    </div> -->
+    <hr>
+    <div class="container mt-3 text-center">
+        <div class="row -content-center">
+            <small class="col-12 col-sm-6 col-md-4">
+        <div class="card custom-card">
+          <div class="img-container">
+            <img src="{{users.avatar_url}}"/>
+          </div>
+          <div class="custom-card-body">
+            <h4 class="card-title">
+              {{users.login}}
+            </h4>
+            <div class="category">
+              Since: {{users.created_at | date}}
+            </div>
+            <div class="text text-overflow">
+               {{users.description}}
+            </div>
+          </div>
+        </div>
+    </small>
+        </div>
+    </div>
+
 </div>
