--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -5,7 +5,7 @@
             <div class="col-lg-8 mx-auto">
                 <div class="bg-white m-5  rounded shadow">
 
-                    <app-search-form (getName)='searchRepos($event)'></app-search-form>
+                    <app-search-form (getName)='searchRepos()'></app-search-form>
 
                 </div>
             </div>
